--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
     content: `
       <span style="color:#FF8400">Attività</span><br>
       → Gita di un giorno al Parco Tenorio e Rio Celeste.<br>
-      → Rientro a La Fortuna
+      → Rientro a La Fortuna<br><br>
      <span style="color:#FF8400">Info</span><br>
      → Entrata $12 USD per adulti stranieri<br>
-     → Orari: 8:00 – 14:00 (ultimo ingresso), il parco chiude alle 16:00
-     → Bisogna considerare la strada sterrata
+     → Orari: 8:00 – 14:00 (ultimo ingresso), il parco chiude alle 16:00<br>
+     → Bisogna considerare la strada sterrata<br>
      → Il trekking fino alla cascata Rio Celeste è facile–intermedio, circa 3–4 km A/R (un po' fangoso nella stagione delle piogge)
     `
   },
@@ -236,7 +236,7 @@
       → Spiagge<br>
       → Scimmie cappuccine, bradipi e iguane<br><br>
         <span style="color:#FF8400">Info</span><br>
-      → Adulti stranieri: $18,08 USD
+      → Adulti stranieri: $18,08 USD<br>
       → <a href=" https://serviciosenlinea.sinac.go.cr" target="_blank">serviciosenlinea.sinac.go.cr</a> si acquista solo online!
     `
   },
